fixes with wrapping long lists and their item's margin's

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,13 +313,13 @@ figure {
   list-style-type: none;
   width: 280px;
   margin: 0;
+  margin-right: 120px;
   padding: 0;
   padding-top: 20px;
 }
 
 .services-list {
   margin: 0;
-  margin-left: 120px;
   padding: 0;
   list-style-type: none;
 }
@@ -414,6 +414,19 @@ figure {
   margin: 0;
 }
 
+.shipping-companies-item {
+  margin-bottom: 28px;
+}
+
+.shipping-companies-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.about-info-link {
+  align-self: flex-start;
+  margin-top: auto;
+}
+
 .about-info-list {
   display: flex;
   padding: 50px 0 0;
@@ -428,6 +441,8 @@ figure {
 }
 
 .about-info-item {
+  display: flex;
+  flex-direction: column;
   width: 560px;
 }
 
@@ -564,7 +579,10 @@ figure {
 
 .footer-navigation-list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
+  min-width: 620px;
   margin: 0;
   margin-bottom: 53px;
   padding: 0;
@@ -582,6 +600,7 @@ figure {
 .social-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
   width: 150px;
   margin: 0;
